--- a/src/CharacterCard.css
+++ b/src/CharacterCard.css
@@ -4,10 +4,14 @@
     background-color: antiquewhite ;
 }
 
-h1{
-    color: cornflowerblue;
+.alive h1{
+    color: green;
+}
+
+.dead h1{
+    color: red;
 }
 
 p{
-    color: indigo;
+    color: black;
 }
